--- a/css/styles.css
+++ b/css/styles.css
@@ -141,13 +141,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
+  width: 50px;
+  height: 50px;
   padding: 0;
   margin: 0;
   border: none;
   border-radius: 50%;
-  background-color: tomato;
+  background-color: transparent;
   color: #fff;
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
@@ -164,13 +164,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
-  height: 32px;
+  width: 50px;
+  height: 50px;
   padding: 0;
   margin: 0;
   border: none;
   border-radius: 50%;
-  background-color: tomato;
+  background-color: transparent;
   color: #fff;
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
